final fix for webp rules/image spacing

--- a/includes/jquery-ui-1.10.1.custom.css
+++ b/includes/jquery-ui-1.10.1.custom.css
@@ -721,6 +721,7 @@ div.ewww-status-detail {
 	padding: 15px 20px 15px 10px;
 	line-height: 1.3;
 	align-self: center;
+	flex: 1 1 auto;
 }
 .ewww-setting-header {
 	color: #1d2327;
